# TypeScriptCompiler

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  prepare_3rdParty_debug.sh  prepare_3rdParty_release.sh
docs/fix/gc/: CMakeLists.txt
scripts/: build_gc_debug.sh  build_gc_release.sh  build_llvm_debug.sh  build_llvm_release.sh  build_llvm_wasm_debug.sh  build_llvm_wasm_release.sh  config_llvm_debug.sh  config_llvm_release.sh  config_llvm_wasm_debug.sh  config_llvm_wasm_release.sh  separate_debug_info.sh
tsc/: CMakeLists.txt  build_tsc_debug.sh  build_tsc_release-test.sh  build_tsc_release.sh  config_tsc_debug.sh  config_tsc_release.sh
tsc/cmake/: config_macros.cmake
tsc/include/TypeScript/: CMakeLists.txt  TypeScriptOps.h
tsc/include/TypeScript/LowerToLLVM/: LLVMDebugInfo.h
tsc/lib/TypeScript/: CMakeLists.txt  MLIRGen.cpp
tsc/lib/TypeScriptAliasPass/: CMakeLists.txt
tsc/lib/TypeScriptRuntime/: CMakeLists.txt
tsc/test/print-tester/: CMakeLists.txt
tsc/test/tester/: CMakeLists.txt
tsc/tsc/: CMakeLists.txt  TextDiagnostic.cpp
tsc/tsc-new-parser/: CMakeLists.txt  config.h  core.h  scanner.cpp  types.h
tsc/unittests/: CMakeLists.txt
tsc/unittests/MLIRGen/: CMakeLists.txt
